--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <nav>
-      <img src="assets/img/logo.svg" alt="Logo Mange" />
+      <img class="principal-logo" src="assets/img/logo.svg" alt="Logo Mange" />
       <ul>
         <li><a href="#">Pricing</a></li>
         <li><a href="#">Product</a></li>
@@ -34,11 +34,7 @@
         </div>
 
         <div>
-          <img
-            class="graphics"
-            src="./assets/img/illustration-intro.svg"
-            alt=""
-          />
+          <img class="graphics" src="./assets/img/Grafics.png" alt="" />
         </div>
       </section>
 
